assets/css/app.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

/* This file is for your main application CSS */

.btn-respawn {
  @apply border border-amber-500 bg-amber-100 rounded drop-shadow-lg text-amber-600 text-sm font-bold px-2 py-1 hover:bg-amber-50 active:saturate-200;
}

.btn-attack {
  @apply border border-red-500 bg-red-100 rounded drop-shadow-lg px-2 py-1 text-red-600 text-sm font-bold hover:bg-red-50 active:saturate-200;
}

.damage-info {
  @apply border border-transparent bg-neutral-50 rounded px-2 py-1 text-neutral-600 text-sm cursor-default;
}

@keyframes attack {
  0% {
    transform: translateY(0px) scale(1, 1);
  }
  50% {
    transform: translateY(-4px) scale(1.05, 1.05);
    background: transparent;
  }
  100% {
    transform: translateY(0px) scale(1,1);
  }
}

